add: order by clause and refactoring
